o Fixed bug [2891775], previous fix for bug [2340241] has broken Java 1.3 compatibility.
git-svn-id: http://svn.code.sf.net/p/jtds/code/branches/jTDS_1_2_2_JDBC3/jtds@1062 97a8069c-bbaa-4fa2-9e49-561d8e0b19ef